--- a/homepage.html
+++ b/homepage.html
@@ -46,7 +46,85 @@
         </div>
     </div>
 
+    <div class="wws-container">
+        <div>
+            <h1>Who We Serve</h1>
+            <div class="orange-bar"></div>
+            <h3>Empowering Foster Youth Transitioning to Adulthood <br> through Trucking Education</h3>
+            <p>
+                At The Bridge to Independence, we specialize in empowering foster youth transitioning to adulthood through 
+                vocational trucking education. Our targeted programs provide accessible and affordable opportunities, 
+                equipping these young individuals with practical skills and personal development for a promising future in 
+                the trucking industry. With a commitment to breaking the cycle of uncertainty, we focus on fostering 
+                independence and success, ensuring a confident start to their adult lives. At The Bridge to Independence, we 
+                believe in providing the tools for not only a fulfilling career but also a self-assured journey into the next 
+                chapter of life.           
+            </p>
+        </div>
+        <img src="./images/hp-wws.png" class="wws-img">
+    </div>
 
+    <div class="vision-container">
+        <img src="./images/hp-visionary.png" class="vision-img">
+        <div>
+            <h1>Our Vision</h1>
+            <div class="green-bar"></div>
+            <h3>Paving Roads to Independence and Success</h3>
+            <p>
+                At The Bridge to Independence, our vision is to be a guiding force in transforming the lives 
+                of vulnerable youth, particularly those aging out of the foster care system. We aspire to create
+                a future where every individual, regardless of their past challenges, has the opportunity to 
+                achieve independence and success. Through our vocational trucking education, we envision 
+                empowering these young individuals with the skills, confidence, and resilience needed to 
+                navigate the road ahead. Our commitment extends beyond the classroom, aiming to instill a sense
+                of purpose and self-reliance that transcends the trucking industry. By envisioning a world where
+                our graduates thrive personally and professionally, we seek to build a community of empowered
+                individuals who drive change, break barriers, and inspire others to follow a path of lifelong 
+                learning and achievement.           
+            </p>
+        </div>
+    </div>
+
+    <div class="threeBox-container">
+        <div class="boxes">
+            <img>
+            <h2>Vocational Skills</h2>
+            <p>
+                At The Bridge to Independence we specialize in diesel technology, offering hands-on vocational 
+                training that equips individuals with essential skills needed for a successful career in diesel 
+                mechanics."
+            </p>
+        </div>
+
+        <div class="boxes">
+            <img>
+            <h2>Vocational Skills</h2>
+            <p>
+                At The Bridge to Independence we specialize in diesel technology, offering hands-on vocational 
+                training that equips individuals with essential skills needed for a successful career in diesel 
+                mechanics."
+            </p>
+        </div>
+
+        <div class="boxes">
+            <img>
+            <h2>Vocational Skills</h2>
+            <p>
+                At The Bridge to Independence we specialize in diesel technology, offering hands-on vocational 
+                training that equips individuals with essential skills needed for a successful career in diesel 
+                mechanics."
+            </p>
+        </div>
+    </div>
+
+    <div class="footer">
+        
+        <p>
+            All rights reserved. “The Bridge to Independence” is a registered service mark owned by The Bridge to 
+            Independence®. The Bridge to Independence® is a tax-exempt 501(C)(3) nonprofit organization (Tax ID: 
+            84-3978501).  Your restricted gift is tax-deductible as allowed by law.
+        </p>
+    </div>
 
 
 
