--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Page - The Bridge To Independence</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/3497f25522.js" crossorigin="anonymous"></script>
 </head>
@@ -87,43 +87,64 @@
 
     <div class="threeBox-container">
         <div class="boxes">
-            <img>
+            <img src = "images/hp-vocationalskills.png">
             <h2>Vocational Skills</h2>
             <p>
                 At The Bridge to Independence we specialize in diesel technology, offering hands-on vocational 
                 training that equips individuals with essential skills needed for a successful career in diesel 
-                mechanics."
+                mechanics.
             </p>
+            <div class="box-button">
+                <a href="#">Learn More</a>
+            </div>
         </div>
 
         <div class="boxes">
-            <img>
-            <h2>Vocational Skills</h2>
+            <img class = "box-img" src = "images/hp-lifeskills.png">
+            <h2>Life Skills</h2>
             <p>
-                At The Bridge to Independence we specialize in diesel technology, offering hands-on vocational 
-                training that equips individuals with essential skills needed for a successful career in diesel 
-                mechanics."
+                Our fraternity-inspired mentorship program fosters invaluable life skills, empowering students 
+                ensuring they not only excel academically but also thrive personally in their journey towards a 
+                fulfilling future.
             </p>
+            <div class="box-button">
+                <a href="#">Learn More</a>
+            </div>
         </div>
 
         <div class="boxes">
-            <img>
-            <h2>Vocational Skills</h2>
+            <img class = "box-img" src = "images/donate.png">
+            <h2>Donate</h2>
             <p>
-                At The Bridge to Independence we specialize in diesel technology, offering hands-on vocational 
-                training that equips individuals with essential skills needed for a successful career in diesel 
-                mechanics."
+                Support our mission by donating; your contribution fuels education, opens doors, and transforms 
+                lives, ensuring a brighter future for at-risk youth pursuing vocational trucking education.
             </p>
+            <div class="box-button box-donate">
+                <a href="#">Donate</a>
+            </div>
         </div>
     </div>
 
     <div class="footer">
-        
-        <p>
-            All rights reserved. “The Bridge to Independence” is a registered service mark owned by The Bridge to 
-            Independence®. The Bridge to Independence® is a tax-exempt 501(C)(3) nonprofit organization (Tax ID: 
-            84-3978501).  Your restricted gift is tax-deductible as allowed by law.
-        </p>
+        <ul class="footer-tabs">
+            <li><a href="#about">About</a></li>
+            <li><a href="#lifeSkills">Life Skills</a></li>
+            <li><a href="#vocationalSkills">Vocational Skills</a></li>
+            <li><a href="#donate">Donate</a></li>
+        </ul>
+        <div class="content-container">
+            <div class = "disclaimer-container">
+                <p>
+                    All rights reserved. “The Bridge to Independence” is a registered service mark owned by The Bridge to 
+                    Independence®. The Bridge to Independence® is a tax-exempt 501(C)(3) nonprofit organization (Tax ID: 
+                    84-3978501).  Your restricted gift is tax-deductible as allowed by law.
+                </p>
+            </div>
+            <div class = "address-container">
+                <p>Headquarters</p>
+                <p>1201 N Orange Street #400 Wilmington, DE 19801</p>
+            </div>
+        </div>
     </div>
 
 
