--- a/homepage.html
+++ b/homepage.html
@@ -13,12 +13,12 @@
             <img src="./images/logo.png" class="logo">
             
             <ul id="sidemenu">
-                <li><a href="#about">About</a></li>
-                <li><a href="#lifeSkills">Life Skills</a></li>
-                <li><a href="#vocationalSkills">Vocational Skills</a></li>
+                <li><a href="homepage.html">About</a></li>
+                <li><a href="Vocational Skills.html">Vocational Skills</a></li>    
+                <li><a href="Life Skills.html">Life Skills</a></li>    
                 <li>                
                     <div class="donate">
-                        <a href="#donate">Donate</a>
+                        <a href="Donate.html">Donate</a>
                     </div>
                 </li>
                 <i class="fas fa-times" onclick="closemenu()"></i>
@@ -31,7 +31,7 @@
         <img src="./images/logo.png" class="logo-fs">
     </div>
 
-    <div class="mission-container">
+    <div class="ls-green-container">
         <img src="./images/hp-mission.png" class="mission-img">
         <div>
             <h1>Our Mission</h1>
@@ -46,7 +46,7 @@
         </div>
     </div>
 
-    <div class="wws-container">
+    <div class="ls-white-container">
         <div>
             <h1>Who We Serve</h1>
             <div class="orange-bar"></div>
@@ -61,11 +61,11 @@
                 chapter of life.           
             </p>
         </div>
-        <img src="./images/hp-wws.png" class="wws-img">
+        <img src="./images/hp-wws.png" class="ls-white-img">
     </div>
 
-    <div class="vision-container">
-        <img src="./images/hp-visionary.png" class="vision-img">
+    <div class="ls-orange-container">
+        <img src="./images/hp-visionary.png" class="ls-orange-img">
         <div>
             <h1>Our Vision</h1>
             <div class="green-bar"></div>
@@ -95,7 +95,7 @@
                 mechanics.
             </p>
             <div class="box-button">
-                <a href="#">Learn More</a>
+                <a href="Vocational Skills.html">Learn More</a>
             </div>
         </div>
 
@@ -108,7 +108,7 @@
                 fulfilling future.
             </p>
             <div class="box-button">
-                <a href="#">Learn More</a>
+                <a href="Life Skills.html">Learn More</a>
             </div>
         </div>
 
@@ -120,17 +120,17 @@
                 lives, ensuring a brighter future for at-risk youth pursuing vocational trucking education.
             </p>
             <div class="box-button box-donate">
-                <a href="#">Donate</a>
+                <a href="Donate.html">Donate</a>
             </div>
         </div>
     </div>
 
     <div class="footer">
         <ul class="footer-tabs">
-            <li><a href="#about">About</a></li>
-            <li><a href="#lifeSkills">Life Skills</a></li>
-            <li><a href="#vocationalSkills">Vocational Skills</a></li>
-            <li><a href="#donate">Donate</a></li>
+            <li><a href="homepage.html">About</a></li>
+            <li><a href="Vocational Skills.html">Vocational Skills</a></li>   
+            <li><a href="Life Skills.html">Life Skills</a></li>     
+            <li><a href="Donate.html">Donate</a></li>
         </ul>
         <div class="content-container">
             <div class = "disclaimer-container">
