--- a/Life Skills.html
+++ b/Life Skills.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vocational Skills - The Bridge To Independence</title>
+    <title>Life Skills - The Bridge To Independence</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/3497f25522.js" crossorigin="anonymous"></script>
 </head>
@@ -28,51 +28,77 @@
     </div>
 
     <div class="background-container">
-            <img src="./images/vs-background.png" class="logo-fs">
+            <img src="./images/ls-lifeskills.png" class="logo-fs">
             <div class="overlay">
-                <h1>Vocational Skills</h1>
-                <p>Rev Up Your Career: Diesel Vocational Training at Its Best!</p>
+                <h1>Life Skills</h1>
+                <p>Fueling Success Beyond the Garage!</p>
             </div>
     </div>
 
     <div class="ls-white-container">
-        <img src="./images/vs-journey.png" class="ls-white-img">
+        <img src="./images/ls-bonds.png" class="ls-white-img">
         <div>
-            <h1>The Journey</h1>
+            <h1>Building Bonds</h1>
             <div class="orange-bar"></div>
             <p>
-                Embark on a transformative journey at The Bridge to Independence's 2-year diesel 
-                tech program, where hands-on training hones your skills in engine diagnostics and 
-                repair. Our comprehensive curriculum ensures a mastery of the intricacies of diesel 
-                mechanics, setting the stage for a successful career in the field.            
+                In our 2-year diesel tech program at The Bridge, the deliberate duration allows 
+                students to foster understanding and provide time for lasting connections. This 
+                timeframe is an opportunity for mentorship within a supportive community that 
+                guides and uplifts students throughout their journey.
             </p>
         </div>
     </div>
 
     <div class="ls-green-container">
         <div>
-            <h1>Program Description</h1>
+            <h1>Nurturing Interpersonal Growth </h1>
             <div class="orange-bar"></div>
-            <p>
-                Prepare for a rewarding career as an entry-level truck/heavy equipment technician 
-                through The Bridge's 2-year diesel tech program. Our curriculum is meticulously crafted 
-                to emphasize hands-on learning, utilizing actual customer projects and mock-up units, 
-                mirroring real industry scenarios. Dive into extensive shop work covering engines, transmissions, 
-                differentials, brakes, steering, suspension, cooling, hydraulics, undercarriages, fuel and air 
-                systems, and receive an introduction to vehicle/equipment operation.
-                <br><br>
-                Throughout the program, theory and troubleshooting are integrated, addressing challenges in the 
-                repair and maintenance of diverse automotive components. Safety and basic welding procedures are
-                also incorporated into the coursework, providing a holistic skill set for our graduates. 
-                <br><br>
-                Successful completion of each semester, or instructor permission, is essential for progression, 
-                ensuring that students grasp the foundational knowledge required for the subsequent phases of the 
-                program. Placement in specific English and math courses is determined by the college assessment 
-                test, ensuring a tailored educational experience for each student. Join us in transforming your 
-                passion for diesel technology into a thriving career.              
-            </p>
+            <ul>
+                <li>Integral components of our life skills program</li>
+                <li>Communication and fellowship honed within the fraternity's chapter room</li>
+                <li>Develop effective communication skills for personal and professional contexts</li>
+                <li>Strengthen connections with peers and mentors</li>
+                <li>Focus on workplace skills for success in professional environments</li>
+                <li>Emphasis on the power of trust</li>
+                <li>Creates a supportive community encouraging open sharing and personal growth</li>
+                <li>Unique blend enriches personal development</li>
+                <li>Lays the foundation for a future marked by resilience, self-assurance, and meaningful connections</li>
+            </ul>
         </div>
-        <img src="./images/vs-description.png" class="ls-green-img">
+        <img src="./images/ls-nurture.png" class="nurture-img">
+    </div>
+
+    <div class="ls-white-container">
+        <img src="./images/ls-wellbeing.png" class="ls-white-img">
+        <div>
+            <h1>Fostering Holistic Well-being</h1>
+            <div class="orange-bar"></div>
+            <ul>
+                <li>Held within the fraternity's chapter room</li>
+                <li>Prioritizes participants' overall well-being</li>
+                <li>Emphasizes health and wellness</li>
+                <li>Guides sustainable habits for physical and mental fitness</li>
+                <li>Empowers informed choices in food and nutrition</li>
+                <li>Practical skills in housing and home management</li>
+                <li>Nurture independence and responsibility</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="ls-orange-container">
+        <div>
+            <h1>Empowering Financial Literacy<br>and Risk Prevention</h1>
+            <div class="green-bar"></div>
+            <ul>
+                <li>Beyond traditional education, instills crucial financial management skills
+                <li>Engaging workshops provide tools for navigating personal finance complexities</li>
+                <li>Promotes responsible decision-making</li>
+                <li>Emphasizes risk prevention</li>
+                <li>Equips individuals with knowledge and strategies for safeguarding well-being</li>
+                <li>Fosters resilience and proactive risk management</li>
+            </ul>
+        </div>
+        <img src="./images/ls-finance.png" class="nurture-img">
     </div>
 
     <div class="ls-white-container">
