--- a/Life Skills.html
+++ b/Life Skills.html
@@ -108,7 +108,7 @@
                 Donate as little as $5 to allow us to change the lives of foster children all over the country.        
             </p>
             <div class="box-button box-donate orange">
-                <a href="#">Donate</a>
+                <a href="Donate.html">Donate</a>
             </div>
         </div>
     </div>
