--- a/homepage.html
+++ b/homepage.html
@@ -51,7 +51,7 @@
         <div>
             <h1>Who We Serve</h1>
             <div class="orange-bar"></div>
-            <h3>Empowering Foster Youth Transitioning to Adulthood <br> through Trucking Education</h3>
+            <h3>Empowering Foster Youth Transitioning to Adulthood through Trucking Education</h3>
             <p>
                 At The Bridge to Independence, we specialize in empowering foster youth transitioning to adulthood through 
                 vocational trucking education. Our targeted programs provide accessible and affordable opportunities, 
