--- a/homepage.html
+++ b/homepage.html
@@ -95,9 +95,7 @@
                 training that equips individuals with essential skills needed for a successful career in diesel 
                 mechanics.
             </p>
-            <div class="box-button">
-                <a href="Vocational Skills.html">Learn More</a>
-            </div>
+            <a class="box-button" href="Vocational Skills.html">Learn More</a>
         </div>
 
         <div class="boxes">
@@ -108,9 +106,7 @@
                 ensuring they not only excel academically but also thrive personally in their journey towards a 
                 fulfilling future.
             </p>
-            <div class="box-button">
-                <a href="Life Skills.html">Learn More</a>
-            </div>
+            <a class="box-button" href="Life Skills.html">Learn More</a>
         </div>
 
         <div class="boxes">
@@ -120,9 +116,7 @@
                 Support our mission by donating; your contribution fuels education, opens doors, and transforms 
                 lives, ensuring a brighter future for at-risk youth pursuing vocational trucking education.
             </p>
-            <div class="box-button box-donate">
-                <a href="Donate.html">Donate</a>
-            </div>
+            <a class="box-button box-donate"href="Donate.html">Donate</a>
         </div>
     </div>
 
@@ -137,13 +131,11 @@
             <div class = "disclaimer-container">
                 <p>
                     All rights reserved. “The Bridge to Independence” is a registered service mark owned by The Bridge to 
-                    Independence®. The Bridge to Independence® is a tax-exempt 501(C)(3) nonprofit organization (Tax ID: 
-                    84-3978501).  Your restricted gift is tax-deductible as allowed by law.
+                    Independence®.
                 </p>
             </div>
             <div class = "address-container">
-                <p>Headquarters</p>
-                <p>1201 N Orange Street #400 Wilmington, DE 19801</p>
+                <p>Headquarters<br>1201 N Orange Street #400 Wilmington, DE 19801</p>
             </div>
         </div>
     </div>
