--- a/Donate.html
+++ b/Donate.html
@@ -10,8 +10,9 @@
 <body>
     <div class="header">
         <nav>
-            <img src="./images/logo.png" class="logo">
-            
+            <a href="homepage.html">
+                <img src="./images/logo.png" class="logo">
+            </a>
             <ul id="sidemenu">
                 <li><a href="homepage.html">About</a></li>
                 <li><a href="Vocational Skills.html">Vocational Skills</a></li>        
@@ -68,11 +69,11 @@
         <p>If you want to donate through Zelle or Cash App you can scan the respective QR Codes or click their buttons.</p>
     
         <div class="zelle-cashapp-buttons">
-            <a href="https://cash.app/matthewskelton7">
+            <a href="https://cash.app/matthewskelton7" target="_blank" rel="noopener noreferrer">
                 <img src="./images/cash-app-button.png" class="cashapp-button">
             </a>
             <div class = "zelle-button">
-                <a href="https://cash.app/matthewskelton7">
+                <a href="https://www.zellepay.com/" target="_blank" rel="noopener noreferrer">
                     <img src="./images/zelle-button.png">
                 </a>
             </div>
@@ -80,11 +81,27 @@
         </div>
 
         <div class="zelle-cashapp-qr-codes">
-            <img src="./images/cashapp-qr-code.png" class="">
+            <img src="./images/cashapp-qr-code.png" class="cashapp-qr-code">
 
-            <img src="./images/zelle-qr-code.png">
+            <img src="./images/zelle-qr-code.png" class="zelle-qr-code">
 
         </div>
+
+<!-- Other payment options to consider
+
+PayPal Giving Fund: PayPal offers a service called PayPal Giving Fund, which allows donors to contribute to charities securely. Charities can register
+with PayPal Giving Fund to receive donations. PayPal covers all transaction fees for donations made through the platform, so charities receive 100% of the donated amount.
+
+Stripe: Stripe is another payment processing platform that offers discounted transaction fees for registered 501(c)(3) charities. They provide a secure and easy-to-use platform 
+for accepting online donations. Stripe's nonprofit discount program offers reduced fees for eligible organizations.
+
+Donorbox: Donorbox is a fundraising software that specializes in online donations for nonprofits. It allows charities to create customizable donation forms that can be embedded 
+on their websites or shared via email and social media. Donorbox offers a free plan with no monthly fees, and they only charge a small transaction fee for each donation.
+
+Google Pay for Nonprofits: Google offers a program for nonprofits called Google for Nonprofits, which includes access to Google Pay for Nonprofits. 
+This allows eligible organizations to accept donations securely through Google Pay with no processing fees.
+
+-->
 
         <h2>Donating via Check</h2>
 
@@ -106,8 +123,7 @@
             <div class = "disclaimer-container">
                 <p>
                     All rights reserved. “The Bridge to Independence” is a registered service mark owned by The Bridge to 
-                    Independence®. The Bridge to Independence® is a tax-exempt 501(C)(3) nonprofit organization (Tax ID: 
-                    84-3978501).  Your restricted gift is tax-deductible as allowed by law.
+                    Independence®.
                 </p>
             </div>
             <div class = "address-container">
