--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,9 @@
     <div class="header">
         <nav>
             <div class="fade-in-image">
-                <img src="./images/logo.png" class="logo">
+                <a href="homepage.html">
+                    <img src="./images/logo.png" class="logo">
+                </a>
             </div>
             <ul id="sidemenu">
                 <li><a href="homepage.html">About</a></li>
