--- a/Vocational Skills.html
+++ b/Vocational Skills.html
@@ -10,8 +10,9 @@
 <body>
     <div class="header">
         <nav>
-            <img src="./images/logo.png" class="logo">
-            
+            <a href="homepage.html">
+                <img src="./images/logo.png" class="logo">
+            </a>            
             <ul id="sidemenu">
                 <li><a href="homepage.html">About</a></li>
                 <li><a href="Vocational Skills.html">Vocational Skills</a></li>        
@@ -32,6 +33,10 @@
             <div class="overlay">
                 <h1>Vocational Skills</h1>
                 <p>Rev Up Your Career: Diesel Vocational Training at Its Best!</p>
+                <h3>Vocations to be offered:</h3>
+                <ul>
+                    
+                </ul>
             </div>
     </div>
 
@@ -77,13 +82,11 @@
 
     <div class="ls-white-container">
         <div class="donate-container">
-            <h2>Interested in helping us fund our program?</h2>
+            <h2>We're only asking for $5</h2>
             <p>
-                Donate as little as $5 to allow us to change the lives of foster children all over the country.        
+                This is a grass roots movement by the American people to help America's foster kids.        
             </p>
-            <div class="box-button box-donate orange">
-                <a href="Donate.html">Donate</a>
-            </div>
+            <a href="Donate.html" class="box-button box-donate orange">Donate</a>
         </div>
     </div>
 
@@ -98,8 +101,7 @@
             <div class = "disclaimer-container">
                 <p>
                     All rights reserved. “The Bridge to Independence” is a registered service mark owned by The Bridge to 
-                    Independence®. The Bridge to Independence® is a tax-exempt 501(C)(3) nonprofit organization (Tax ID: 
-                    84-3978501).  Your restricted gift is tax-deductible as allowed by law.
+                    Independence®.
                 </p>
             </div>
             <div class = "address-container">
